; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_worker_partition_protocol.c_InitTaskDirectory.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_worker_partition_protocol.c_InitTaskDirectory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AccessExclusiveLock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @InitTaskDirectory(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @JobDirectoryName(i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @TaskDirectoryName(i32 %11, i32 %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @AccessExclusiveLock, align 4
  %16 = call i32 @LockJobResource(i32 %14, i32 %15)
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @DirectoryExists(i32 %17)
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %5, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %2
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @CitusCreateDirectory(i32 %22)
  br label %24

24:                                               ; preds = %21, %2
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @DirectoryExists(i32 %25)
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* %6, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %32, label %29

29:                                               ; preds = %24
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @CitusCreateDirectory(i32 %30)
  br label %32

32:                                               ; preds = %29, %24
  %33 = load i32, i32* %3, align 4
  %34 = load i32, i32* @AccessExclusiveLock, align 4
  %35 = call i32 @UnlockJobResource(i32 %33, i32 %34)
  %36 = load i32, i32* %8, align 4
  ret i32 %36
}

declare dso_local i32 @JobDirectoryName(i32) #1

declare dso_local i32 @TaskDirectoryName(i32, i32) #1

declare dso_local i32 @LockJobResource(i32, i32) #1

declare dso_local i32 @DirectoryExists(i32) #1

declare dso_local i32 @CitusCreateDirectory(i32) #1

declare dso_local i32 @UnlockJobResource(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
